# duh

./: .gitignore  Cargo.toml  README.md  dskdb  duh
.github/workflows/: ci.yml
blackbox/: conftest.py  db_diff.py  gh-stub.sh  pytest.ini  test_db_parity.py  test_freeable.py  test_gold.py  test_reports.py  test_scan.py  test_serve.py  test_share.py
docs/: index.html
docs/superpowers/plans/: 2026-07-09-rust-rewrite.md  CLAUDE.md
docs/superpowers/specs/: 2026-07-15-share-urls-design.md
docs/superpowers/spikes/2026-07-15-share-url/: encode.py  viewer.html
docs/v/: index.html  treemap.js
scripts/: sync-viewer.sh
src/: attrs.rs  db.rs  excludes.rs  freeable.rs  lib.rs  main.rs  reports.rs  scan.rs  serve.rs  share.rs
static/: app.js  index.html  style.css
tests/: selftest.rs
