[package]
name = "duh"
version = "3.0.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tiny_http = "0.12"
libc = "0.2"
flate2 = "1"
base64 = "0.22"

[profile.release]
lto = true
